nagios-plugins (1.4.3-1.0) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- sean finney <sean@localhost.localdomain>  Sun, 28 May 2006 21:40:55 +0200

nagios-plugins (1.4.3-1) unstable; urgency=low

  * new upstream release.

  [sean finney]
  * the following dpatches have been incorporated upstream and thus removed:
    - 11_check_ups.c_perfdata_fix.dpatch
    - 12_check_mysql.c_mysql_options.dpatch
    - 15_check_mrtg_wtf_conditionals.dpatch
    - 16_check_smtp_protocolfix.dpatch
    - 17_check_smb_freespace.dpatch
    - 19_check_disk_subdirs.dpatch
    - 20_check_ntp_lessbeastlyregex.dpatch
    - 21_de.po_fixes.dpatch
    - 24_check_procs_localefix.dpatch
  * the following dpatches have been modified to still apply against upstream
    - 10_config.h_debiandefaults.dpatch
    - 14_check_log_paths.dpatch
    - 18_check_game_cmdline.dpatch
  * removed the transitional (pre-sarge) fileutils dependency 
    (closes: #368718), thanks to Stefan Huehner for pointing this out.
  * upstream now uses libtool, but the shipped libtool is out of date and
    has problems building against radiusclient1-dev (which might not be
    our fault, but...).  so, for the time being we're shipping an updated
    version of ltmain.sh in the diff (build depending on the newest version
    of libtool is subobtimal for backporting).
  * add --disable-rpath to configure options... arg, and i had to apply
    another patch to ./configure to keep a -R from sneaking in and
    deactivating it.
  * upstream ./configure fails to automagically detect mysql installation now,
    so modify debian/rules accordingly.
  * modify debian/control to be more explicit about build-dependencies to
    make life easier for backporting.

 -- sean finney <seanius@debian.org>  Sat, 27 May 2006 20:03:31 +0200

nagios-plugins (1.4.2-7) unstable; urgency=medium

  [sean finney]
  * update build dependencies to build against libmysqlclient15-dev.
    fixes (now) rc bug, urgency bumped (closes: #343785).